--- a/aboutus.html
+++ b/aboutus.html
@@ -25,7 +25,7 @@
                 <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home"></span> Home</a></li>
                 <li class="nav-item active"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info"></span> About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list"></span> Menu</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-address-book"></span> Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-book"></span> Contact</a></li>
             </ul>
             </div>
         </div>
@@ -62,6 +62,35 @@
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
             </div>
             <div class="col-sm">
+                <div class="card">
+                    <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
+                    <div class="card-body">
+                      <dl class="row">
+                          <dt class="col-6">Started</dt>
+                          <dd class="col-6">3 Feb. 2013</dd>
+                          <dt class="col-6">Major Stake Holder</dt>
+                          <dd class="col-6">Hk Fine Foods Inc.</dd>
+                          <dt class="col-6">Last Year's Turnover</dt>
+                          <dd class="col-6">$1,250,375</dd>
+                          <dt class="col-6">Employees</dt>
+                          <dd class="col-6">40</dd>
+                      </dl>  
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="card card-body bg-light">
+                    <blockquote class="blockquote">
+                        <p class="mb-0">You better cut the pizza in four pieces because
+                            I'm not hungry enough to eat six.
+                        </p>
+                        <footer class="blockquote-footer">Yogi Berra, 
+                            <cite titlr="Source Title">The Wit and Wisdom of Yogi Berra, P.Pepe, Diversion
+                                Books, 2014
+                            </cite>
+                        </footer>
+                    </blockquote>
+                </div>
             </div>
         </div>
 
@@ -79,7 +108,24 @@
                 <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
             </div>
        </div>
-
+       <div class="row row-content">
+           <div class="col-12 col-sm-9">
+               <h2>Facts &amp Figures</h2>
+               <div class="table-responsive">
+                   <table class=" table table-striped">
+                       <thead class="thead-dark">
+                           <tr>
+                               <th>&nbsp</th>
+                               <th>2013</th>
+                               <th>2014</th>
+                               <th>2015</th>
+                           </tr>
+                       </thead>
+                   </table>
+               </div>
+           </div>
+           <div class="col-12 col-sm-3"></div>
+       </div>
     </div>
 
     <footer class="footer">
