--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home"></span> Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info"></span> About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list"></span> Menu</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-address-book"></span> Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-book"></span> Contact</a></li>
             </ul>
             </div>
         </div>
