--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-         <a class="navbar-brand mr-auto" href="#">Ristorante Con Fusion</a>
+         <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="40"></a>
            <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home"></span> Home</a></li>
@@ -37,7 +37,8 @@
                     <h1>Ristorante con Fusion 🍽</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -121,6 +122,32 @@
                                <th>2015</th>
                            </tr>
                        </thead>
+                       <tbody>
+                        <tr>
+                            <th>Employees</th>
+                            <td>15</td>
+                            <td>30</td>
+                            <td>40</td>
+                        </tr>
+                        <tr>
+                            <th>Guests Served</th>
+                            <td>15000</td>
+                            <td>45000</td>
+                            <td>100,000</td>
+                        </tr>
+                        <tr>
+                            <th>Special Events</th>
+                            <td>3</td>
+                            <td>20</td>
+                            <td>45</td>
+                        </tr>
+                        <tr>
+                            <th>Annual Turnover</th>
+                            <td>$251,325</td>
+                            <td>$1,250,375</td>
+                            <td>~$3,000,000</td>
+                        </tr>
+                    </tbody>
                    </table>
                </div>
            </div>
