--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-         <a class="navbar-brand mr-auto" href="#">Ristorante Con Fusion</a>
+         <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="40"></a>
            <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home"></span> Home</a></li>
@@ -39,7 +39,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm align-self-center align-middle">
+                    <button class="btn-warning align-middle px-4 py-2 rounded-lg" type="button">Reserve Table</button>
                 </div>
             </div>
         </div>
@@ -51,8 +55,13 @@
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Uthappizza</h2>
+                <div class="media">
+                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthapizza">    
+                <div class="media-body">
+                <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                </div>
+              </div>        
             </div>
         </div>
 
@@ -62,21 +71,69 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm  order-sm-last col-md">
-                <h2>Weekend Grand Buffet</h2>
+                <div class="media">
+                <div class="media-body">
+                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                </div>
+                <img class="d-flex mr-3 img-thumbnail align-self-right" src="img/buffet.png" alt="Buffet">    
             </div>
-        </div>
+            </div>
+            </div>
+        
 
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm order-sm-first col-md" >
-                <h2>Alberto Somayya</h2>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="alberto">
+                
+                <div class="media-body">
+                    <h2 class="mt-0">Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                </div>
+                </div> 
             </div>
         </div>
+    </div>
+
+    <div class="row row-content align-items-center" style="background: #2b1a4bc5 !important;">
+        <div class="card col-6 offset-3" style="padding:0px">
+            <h3 class="card-header bg-warning text-white" >Reserve a Table</h3>
+            <div class="card-body">
+                <form class="">
+                    <div class="form-group row">
+                        <label for="guests" class="col-md-3 col-form-label">Number of Guests</label>
+                        <div class="col-md-12">
+                            <input  style="margin:5px" type="radio" aria-label="one">1
+                            <input  style="margin:5px" type="radio" aria-label="one">2
+                            <input  style="margin:5px" type="radio" aria-label="one">3
+                            <input  style="margin:5px" type="radio" aria-label="one">4
+                            <input  style="margin:5px" type="radio" aria-label="one">5
+                            <input  style="margin:5px" type="radio" aria-label="one">6
+
+                        </div>
+                        </div>
+                        <div class="form-group row">
+                        <label for="lastname" class="col-md-3 col-form-label">Date and Time</label>
+                        <div class="col-7 col-md-6">
+                            <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                        </div>
+                        <div class="col-5 col-md-3">
+                            <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                        </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-3 col-md-9">
+                                <button style="background-color:rgb(68, 51, 63); border:none; box-shadow:2px 2px 5px rgba(128, 128, 128, 0.514);" type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>    
+            </div>
+            </div>
     </div>
 
     <footer class="footer" >
