--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center align-middle">
-                    <button class="btn-warning align-middle px-4 py-2 rounded-lg" type="button">Reserve Table</button>
+                    <button class="btn-warning align-middle px-4 py-2 mt-4 rounded-lg" type="button">Reserve Table</button>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
     </div>
 
     <div class="row row-content align-items-center" style="background: #2b1a4bc5 !important;">
-        <div class="card col-6 offset-3" style="padding:0px">
+        <div class="card col-10 col-md-6 offset-1 offset-md-3" style="padding:0px">
             <h3 class="card-header bg-warning text-white" >Reserve a Table</h3>
             <div class="card-body">
                 <form class="">
