--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center align-middle">
-                    <button class="btn-warning align-middle px-4 py-2 mt-4 rounded-lg" type="button">Reserve Table</button>
+                    <button class="btn-warning align-middle px-4 py-2 mt-4 rounded-lg"  type="button"><a href="#reserve" style="color:black;text-decoration: none ;">Reserve Table</a></button>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    <div class="row row-content align-items-center" style="background: #ded1f8e8 !important;">
+    <div class="row row-content align-items-center" id="reserve" style="background: #ded1f8e8 !important;">
         <div class="card col-10 col-md-8 offset-1 offset-md-2" style="padding:0px">
             <h3 class="card-header bg-warning text-white" >Reserve a Table</h3>
             <div class="card-body">
