--- a/index.html
+++ b/index.html
@@ -99,19 +99,28 @@
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <img class="d-block img-fluid"
-                                src="img/p4.jpeg" alt="Uthappizza">
+                                src="img/uthappizza.png" alt="Uthappizza">
                             <div class="carousel-caption ml-3 d-none d-md-block">
                                 <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
-                              
+                                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block img-fluid"
-                            src="img/p1.jpeg" alt="Uthappizza">
+                                src="img/buffet.png" alt="Buffet">
+                            <div class="carousel-caption ml-3 d-none d-md-block">
+                                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block img-fluid"
-                            src="img/p2.jpeg" alt="Uthappizza">
+                                src="img/alberto.png" alt="Alberto">
+                            <div class="carousel-caption ml-3 d-none d-md-block">
+                                <h2 class="mt-0">Alberto Somayya</h2>
+                    <h4>Executive Chef</h4>
+                    <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                            </div>
                         </div>
                         <ol class="carousel-indicators">
                             <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
@@ -136,8 +145,9 @@
                 <div class="media">
                 <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthapizza">    
                 <div class="media-body">
-                <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                    <h2 class="mt-0">Alberto Somayya</h2>
+                    <h4>Executive Chef</h4>
+                    <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
                 </div>
               </div>        
             </div>
@@ -179,7 +189,7 @@
     </div>
 
     <div id="ReserveModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="content">
+        <div class="modal-dialog modal-md" role="content">
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
@@ -204,10 +214,10 @@
                                 <label for="section" class="col-md-3 col-form-label">Section</label>
                                 <div class="col-7 col-md-6">
                                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                        <label class="btn btn-success active">
+                                        <label class="btn btn-success btn-sm active">
                                           <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
                                         </label>
-                                        <label class="btn btn-danger">
+                                        <label class="btn btn-sm btn-danger">
                                           <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
                                         </label>
                                       </div>
@@ -225,7 +235,7 @@
                             </div>
                             <div class="form-row">
                                 <button type="button" class="btn btn-secondary  ml-auto" data-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-success  ml-1">Reserve</button>        
+                                <button type="submit" class="btn btn-primary  ml-1">Reserve</button>        
                             </div> 
                         </form>
                 </div>
