--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div class="carousel-item">
                             <img class="d-block img-fluid"
                                 src="img/buffet.png" alt="Buffet">
-                            <div class="carousel-caption ml-3 d-none d-md-block">
+                            <div class="carousel-caption   ml-3 d-none d-md-block">
                                 <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                             </div>
@@ -133,6 +133,9 @@
                         <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </a>
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <span id="carousel-button-icon" class="fa fa-pause"></span>
+                        </button>
                     </div>
                 </div>
              </div>
@@ -291,7 +294,23 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    
+    <script>
+        $(document).ready(function(){
+            $("#mycarousel").carousel( { interval: 3000 } );
+            $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $("#carouselButton").children("span").removeClass('fa-pause');
+                    $("#carouselButton").children("span").addClass('fa-play');
+                }
+                else if ($("#carouselButton").children("span").hasClass('fa-play')){
+                    $("#mycarousel").carousel('cycle');
+                    $("#carouselButton").children("span").removeClass('fa-play');
+                    $("#carouselButton").children("span").addClass('fa-pause');                    
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
